<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fog Chess</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="next_turn">Next Turn</string>
    <string name="pass_device">Pass device to other player</string>
    <string name="white_turn">White\'s Turn</string>
    <string name="black_turn">Black\'s Turn</string>
    <string name="game_over">Game Over</string>
    <string name="checkmate">Checkmate!</string>
    <string name="stalemate">Stalemate</string>
    <string name="white_wins">White Wins!</string>
    <string name="black_wins">Black Wins!</string>
    <string name="draw">Draw</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="congrats_white">Congratulations White!\nBlack is checkmated!</string>
    <string name="congrats_black">Congratulations Black!\nWhite is checkmated!</string>
</resources>
